src/objects/Dimagi_Zendesk_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_List__c</fullName>
        <label>Plan List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk_Endpoint__c</fullName>
        <label>Zendesk Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dimagi Zendesk Settings</label>
</CustomObject>